--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ pillow==11.0.0
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
+scipy==1.14.1
 seaborn==0.13.2
 six==1.17.0
 tzdata==2024.2
+windrose==1.9.2
